商品页构建

--- a/src/assets/css/home/home.css
+++ b/src/assets/css/home/home.css
@@ -1,3 +1,9 @@
+.home-index .mui-search {
+  height: 44px;
+}
+.home-index .mui-search .mui-input-clear {
+  margin-top: 5px;
+}
 .home-index .swiperPic {
   height: 200px;
 }
