--- a/src/assets/css/home/home.less
+++ b/src/assets/css/home/home.less
@@ -1,23 +1,38 @@
-.home-index{
-    .swiperPic{
+.home-index {
+    .mui-search {
+        height: 44px;
+
+        .mui-input-clear {
+            margin-top: 5px;
+        }
+    }
+
+    .swiperPic {
         height: 200px;
-        .mtSwipeItem:nth-child(1){
+
+        .mtSwipeItem:nth-child(1) {
             background: url('./../../images/52747066b0947fa40bd5dd2d3a135e0b.jpg') no-repeat;
             background-size: 100% 100%;
-        }:nth-child(2){
+        }
+
+        :nth-child(2) {
             background: url('./../../images/e6b2ab428d2b6413508177db14bb27e3.jpg') no-repeat;
             background-size: 100% 100%;
-        }:nth-child(3){
+        }
+
+        :nth-child(3) {
             background: url('./../../images/f4396b1de74bdcf492f77d3e591d84bd.jpg') no-repeat;
             background-size: 100% 100%;
         }
     }
-    .navBanner{
-        ul{
-            li{
+
+    .navBanner {
+        ul {
+            li {
                 width: 25%;
                 padding: 10px;
-                .mui-icon{
+
+                .mui-icon {
                     color: #333;
                 }
             }
