--- a/src/assets/css/home/home.less
+++ b/src/assets/css/home/home.less
@@ -1,21 +1,25 @@
 .home-index {
+
     // padding-top: 40px;
-    .header{
+    .header {
         // position: fixed;
         width: 100%;
         height: 40px;
         background-color: #333;
         line-height: 40px;
         color: #fff;
-        .mui-icon{
+
+        .mui-icon {
             font-size: 18px;
         }
-        .header_left{
+
+        .header_left {
             width: 20%;
             font-size: 14px;
             float: left;
         }
-        .header_middle{
+
+        .header_middle {
             width: 65%;
             float: left;
             height: 30px;
@@ -25,7 +29,8 @@
             background-color: #eee;
             border-radius: 5px;
             padding: 0 5px;
-            input{
+
+            input {
                 float: right;
                 width: calc(100% - 18px);
                 height: 28px;
@@ -36,15 +41,17 @@
                 padding: 0;
             }
         }
-        .header_right{
+
+        .header_right {
             width: 15%;
             float: left;
             position: relative;
-            span{
-               position: absolute;
-               left: 50%;
-               top: 50%;
-               transform: translate(-50%,50%);
+
+            span {
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, 50%);
             }
         }
     }
@@ -92,4 +99,28 @@
             }
         }
     }
+
+    .water_cascade_flow {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+
+        .water {
+            width: 100%;
+            display: flex;
+            align-items: flex-start;
+            margin-bottom: 100px;
+
+            .cascade_flow {
+                width: 50%;
+                padding: 10px;
+                padding-bottom: 0px;
+                img{
+                    width: 100%;
+                    height: 300px;
+                }
+            }
+        }
+    }
+
 }
